Closed Bug 19566 Opened 25 years ago Closed 25 years ago

[DOGFOOD] Error -229 during installation of psm

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Windows 98
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: trudelle, Assigned: dveditz)

References

Details

(Whiteboard: Fix in hand 11/22)

Using today's opt bits on Win98, I got an 'Error -229: Error occurred during
installation' alert, during installation (duh!)
The installation was not obviusly affected, it completed and I was able to
launch, fill out a secure form (doggie snack!), and read and print a mail
message before it crashed (probably unrelated?).
Assignee: trudelle → dveditz
assigning to dveditz per ssu
Status: NEW → ASSIGNED
Summary: Error -229 during installation → [DOGFOOD] Error -229 during installation of psm
Whiteboard: Fix in hand 11/22
Elevating to dogfood in case of regressions. This bug prevents upgrades of psm,
so full effects won't be felt until the API changes and it breaks. No snacks
from junruh.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I also see this bug, at the end of the installation. What are the files to
update to get this bugfix? Thanks, Vishy
This bug only occurs if you already have Cartman. The existing version will be
compatible, and this is the last thing installed, so there's really no harm
done until cartman is updated, just annoyance.  Since this fix will go into
tomorrow's build we're covered well before we will get a real cartman update.

if you still want the fix it's mozilla/xpinstall/src/nsJSInstall.cpp
*** Bug 19614 has been marked as a duplicate of this bug. ***
what exactly is the bug dan?
GetComponentFolder() was spanked by the change from folder strings to objects,
in a way that raised a JS exception that aborted the install script.
Bulk changing all JAR Installation component bugs to Installer: XPI Packages
Status: RESOLVED → VERIFIED
build 1999121008
Product: Browser → Seamonkey
Component: Installer: XPI Packages → Installer
QA Contact: agracebush → general
You need to log in before you can comment on or make changes to this bug.